--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -1,4 +1,4 @@
-<div class="navbar sticky-top bg-body-tertiary">
+<div class="navbar bg-body-tertiary">
     <div class="container-fluid">
         <div class="row">
             <ul class="nav nav-tabs">
@@ -80,8 +80,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://www.{{ domain }}/scripts/internal/UserFile/UsersPlans.asp?{{ urlQuery }}">Plans</a>
+                        {% url 'userplans:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">User Plans</a>
                     </div>
                     <!-- nav-link -->
                 </li>
