--- a/internaltools/infouser/templates/infouser/sample.html
+++ b/internaltools/infouser/templates/infouser/sample.html
@@ -44,8 +44,98 @@
             </div>
         </form>
         <!-- end form search users -->
-        <h1>TODO: add user info</h1>
-        <!-- form plan items -->
+        <!-- start user info -->
+        {% if not isDisabled %}
+            <div class="row mb-3 border-top border-bottom border-2">
+                <div class="col-sm-2">Name:</div>
+                <div class="col-sm-10">
+                    {{ userInfo.OrganizationName|default:"" }} {{ userInfo.FirstName }}, {{ userInfo.LastName }}
+                </div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Address:</div>
+                <div class="col-sm-10">
+                    {{ userInfo.Address }}, {{ userInfo.City }}, {{ userInfo.State }}, {{ userInfo.PostalCode }}
+                </div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Telephone:</div>
+                <div class="col-sm-10">{{ userInfo.HomePhone }} / {{ userInfo.AccountNumber }}</div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                {% for eachPlan in userPlans %}
+                    <div class="col-sm-2 bg-light">
+                        {% if forloop.first %}Membership:{% endif %}
+                    </div>
+                    <div class="col-sm-10 bg-light">
+                        - {{ eachPlan.NextBilling|date:"Y-m-d" }}: {{ eachPlan.CurrentPlan }} {{ eachPlan.DomainName|default:"" }}
+                    </div>
+                    <div class="w-100 d-none d-sm-block border-bottom">
+                        <!-- new row -->
+                    </div>
+                {% endfor %}
+                <div class="col-sm-2">Credit Card:</div>
+                <div class="col-sm-10">CC:{{ userInfo.CreditcardNumber|default:"" }} {{ userInfo.CreditCardExpiry|date:"ym" }}</div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Preauth. payment:</div>
+                <div class="col-sm-10">
+                    PPA:{{ userInfo.BkBranchTransit|default:"" }} {{ userInfo.BkInstitutionID|default:"" }} {{ userInfo.BkAccount|default:"" }}
+                </div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Reference:</div>
+                <div class="col-sm-10">
+                    {{ userInfo.BankName }} {{ userInfo.CheckNumber }} {{ userInfo.BankAccount }} {{ userinfo.AuthorizationCode }} {{ userInfo.IdentificationCard }} {{ userInfo.ReferredBy|default:"" }} Language:{{ userInfo.Language|default:"FR" }}
+                </div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Notes:</div>
+                <div class="col-sm-10 bg-info-subtle">{{ userInfo.Notes }}</div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Member since:</div>
+                <div class="col-sm-10">{{ userInfo.DateJoined|date:"Y-m-d" }}</div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Account balance:</div>
+                <div class="col-sm-10">{{ userInfo.AccountBalance|yesno:"$,$," }}{{ userInfo.AccountBalance|floatformat:2 }}</div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Last invoice:</div>
+                <div class="col-sm-10">
+                    {{ userInfo.LastInvoiceStatus }} {{ userInfo.LastInvoiceBalance|yesno:"$,$," }}{{ userInfo.LastInvoiceBalance|floatformat:2 }}
+                </div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Outstanding balance:</div>
+                <div class="col-sm-10 fw-bold">
+                    {{ userInfo.OutStandingBalance|yesno:"$,$," }}{{ userInfo.OutStandingBalance|floatformat:2 }}
+                </div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                <div class="col-sm-2">Account status:</div>
+                <div class="col-sm-10 {{ userInfo.ActiveUser|yesno:'bg-success-subtle,bg-warning-subtle' }}">
+                    {{ userInfo.ActiveUser|yesno:"Acive,Inactive" }} {{ userInfo.TempoDisable|yesno:"Temporary disabled," }}
+                </div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+            </div>
+        {% endif %}
+        <!-- end user info -->
+        <!-- form callLogs -->
         <form id="CallComments" action="" novalidate="" method="POST">
             {% csrf_token %}
             {% for hidden in formCallLog.hidden_fields %}{{ hidden }}{% endfor %}
@@ -53,26 +143,21 @@
                 <!-- this hidden button to disable submit on Enter key -->
             </button>
             <fieldset class="form-group border" {{ isDisabled }}>
+                <legend>Call Log:</legend>
                 <div class="row mb-3">
                     <div class="col-sm-2">
                         {{ formCallLog.operator }}
                         <small class="form-text text-danger">{{ formCallLog.operator.errors }}</small>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-6">
                         {{ formCallLog.specialNote }}
                         <small class="form-text text-danger">{{ formCallLog.specialNote.errors }}</small>
                     </div>
                     <label for="{{ formCallLog.requiresFeedback.id_for_label }}"
-                               class="col-sm-2 col-check-label text-end">
-                            {{ formCallLog.requiresFeedback.label }}
-                    </label>
+                           class="col-sm-1 col-check-label text-end">{{ formCallLog.requiresFeedback.label }}</label>
                     <div class="col-sm-1">
                         {{ formCallLog.requiresFeedback }}
                         <small class="form-text text-danger">{{ formCallLog.requiresFeedback.errors }}</small>
-                    </div>
-                    <div class="col-sm-2">
-                        {{ formCallLog.requestFeedback }}
-                        <small class="form-text text-danger">{{ formCallLog.requestFeedback.errors }}</small>
                     </div>
                     <div class="col-sm-2">
                         <button type="submit"
@@ -85,5 +170,32 @@
                 </div>
             </fieldset>
         </form>
-        <!-- end form plan items -->
+        <!-- end form callLogs -->
+        {% if not isDisabled %}
+            <div class="row mb-3 border-top border-bottom border-2">
+                <div class="col-sm-1">Date:</div>
+                <div class="col-sm-2">Type:</div>
+                <div class="col-sm-1">Operator:</div>
+                <div class="col-sm-6">Description:</div>
+                <div class="col-sm-1">Invoice:</div>
+                <div class="col-sm-1">Amount:</div>
+                <div class="w-100 d-none d-sm-block border-bottom">
+                    <!-- new row -->
+                </div>
+                {% for eachLog in callLogs %}
+                    {% cycle 'bg-light' 'bg-light-subtle' as rowcolor silent %}
+                    {% with eachLog.ReqAttention|yesno:"bg-warning-subtle,bg-success-subtle," as reqAttention %}
+                        <div class="col-sm-1 {{ reqAttention }}">{{ eachLog.TranDate|date:"Y-m-d H:i" }}</div>
+                    {% endwith %}
+                    <div class="col-sm-2 {{ rowcolor }}">{{ eachLog.Type }}</div>
+                    <div class="col-sm-1 {{ rowcolor }}">{{ eachLog.Operator|default:"" }}</div>
+                    <div class="col-sm-6 {{ rowcolor }}">{{ eachLog.Desc1|default:"" }} {{ eachLog.Desc2|default:"" }}</div>
+                    <div class="col-sm-1 {{ rowcolor }}">{{ eachLog.InvoiceNum|default:"" }}</div>
+                    <div class="col-sm-1 {{ rowcolor }}">{{ eachLog.PaidAmount|yesno:"$,$," }}{{ eachLog.PaidAmount|floatformat:2 }}</div>
+                    <div class="w-100 d-none d-sm-block border-bottom">
+                        <!-- new row -->
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
     {% endblock %}
