--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -177,8 +177,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://www.{{ domain }}/scripts/internal/SecondaryMailAccounts/default.asp?{{ urlQuery }}">Additional Email</a>
+                        {% url 'mailaccount:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">Additional Email</a>
                     </div>
                     <!-- nav-link -->
                 </li>
