--- a/internaltools/infouser/templates/infouser/sample.html
+++ b/internaltools/infouser/templates/infouser/sample.html
@@ -78,13 +78,13 @@
                     </div>
                 {% endfor %}
                 <div class="col-sm-2">Credit Card:</div>
-                <div class="col-sm-10">CC:{{ userInfo.CreditcardNumber|default:"" }} {{ userInfo.CreditCardExpiry|date:"ym" }}</div>
+                <div class="col-sm-10">{{ userInfo.CreditcardNumber|default:""|truncatechars:8 }} {{ userInfo.CreditCardExpiry|date:"ym" }}</div>
                 <div class="w-100 d-none d-sm-block border-bottom">
                     <!-- new row -->
                 </div>
                 <div class="col-sm-2">Preauth. payment:</div>
                 <div class="col-sm-10">
-                    PPA:{{ userInfo.BkBranchTransit|default:"" }} {{ userInfo.BkInstitutionID|default:"" }} {{ userInfo.BkAccount|default:"" }}
+                    {{ userInfo.BkBranchTransit|default:"" }} {{ userInfo.BkInstitutionID|default:"" }} {{ userInfo.BkAccount|default:"" }}
                 </div>
                 <div class="w-100 d-none d-sm-block border-bottom">
                     <!-- new row -->
