--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -133,8 +133,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://www.{{ domain }}/scripts/internal/OutstandingTransactions/default.asp?{{ urlQuery }}">Outstanding Issues</a>
+                        {% url 'outstandingissues:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">Outstanding issues</a>
                     </div>
                     <!-- nav-link -->
                 </li>
