--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -210,10 +210,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://www.{{ domain }}/scripts/internal/ForceChgPass/default.asp?{{ urlQuery }}">
-                            Change Pass
-                        </a>
+                        {% url 'changepass:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">Change Pass</a>
                     </div>
                     <!-- nav-link -->
                 </li>
