--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -276,10 +276,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://www.{{ domain }}/scripts/internal/Delinquents/AuthenticatedUpdates.asp?{{ urlQuery }}">
-                            Auto Updates
-                        </a>
+                        {% url 'userinput:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">User Input</a>
                     </div>
                     <!-- nav-link -->
                 </li>
