--- a/internaltools/createuser/templates/createuser/sample.html
+++ b/internaltools/createuser/templates/createuser/sample.html
@@ -164,6 +164,28 @@
                         <div class="col-sm-10">
                             {{ formUserDetail.creditCardExpiry }}<small class="form-text text-danger">{{ formUserDetail.creditCardExpiry.errors }}</small>
                         </div>
+                        <div class="border-bottom col-sm-2 form-label mt-3">PPA</div>
+                        <div class="col-sm-10">
+                            <div class="row">
+                                <div class="input-group">
+                                    <div class="form-floating col-sm-2">
+                                        {{ formUserDetail.bankInstitution }}
+                                        <small class="form-text text-danger">{{ formUserDetail.bankInstitution.errors }}</small>
+                                        <label for="{{ formUserDetail.bankInstitution.id_for_label }}">{{ formUserDetail.bankInstitution.label }}</label>
+                                    </div>
+                                    <div class="form-floating col-sm-5">
+                                        {{ formUserDetail.bankTransit }}
+                                        <small class="form-text text-danger">{{ formUserDetail.bankTransit.errors }}</small>
+                                        <label for="{{ formUserDetail.bankTransit.id_for_label }}">{{ formUserDetail.bankTransit.label }}</label>
+                                    </div>
+                                    <div class="form-floating col-sm-5">
+                                        {{ formUserDetail.bankAccount }}
+                                        <small class="form-text text-danger">{{ formUserDetail.bankAccount.errors }}</small>
+                                        <label for="{{ formUserDetail.bankAccount.id_for_label }}">{{ formUserDetail.bankAccount.label }}</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <label for="{{ formUserDetail.bankName.id_for_label }}"
                                class="border-bottom col-sm-2 col-form-label">
                             {{ formUserDetail.bankName.label }}
@@ -177,13 +199,6 @@
                         </label>
                         <div class="col-sm-10">
                             {{ formUserDetail.checkNumber }}<small class="form-text text-danger">{{ formUserDetail.checkNumber.errors }}</small>
-                        </div>
-                        <label for="{{ formUserDetail.bankAccount.id_for_label }}"
-                               class="border-bottom col-sm-2 col-form-label">
-                            {{ formUserDetail.bankAccount.label }}
-                        </label>
-                        <div class="col-sm-10">
-                            {{ formUserDetail.bankAccount }}<small class="form-text text-danger">{{ formUserDetail.bankAccount.errors }}</small>
                         </div>
                         <label for="{{ formUserDetail.identificationCard.id_for_label }}"
                                class="border-bottom col-sm-2 col-form-label">
