infouser fix typo BkInstitutionId

--- a/internaltools/infouser/templates/infouser/sample.html
+++ b/internaltools/infouser/templates/infouser/sample.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-sm-2">Preauth. payment:</div>
                 <div class="col-sm-10">
-                    {{ userInfo.BkBranchTransit|default:"" }} {{ userInfo.BkInstitutionID|default:"" }} {{ userInfo.BkAccount|default:"" }}
+                    {{ userInfo.BkBranchTransit|default:"" }} {{ userInfo.BkInstitutionId|default:"" }} {{ userInfo.BkAccount|default:"" }}
                 </div>
                 <div class="w-100 d-none d-sm-block border-bottom">
                     <!-- new row -->
